Code review and fixed z-index of popup being not set making a problem with quill

--- a/strzelnicaAngular/src/app/styles/popup.component.css
+++ b/strzelnicaAngular/src/app/styles/popup.component.css
@@ -5,7 +5,6 @@
   font-weight: bold;
   text-transform: uppercase;
   border: 1px solid #a5a5a5;
-  color: #555;
   color: #333;
   cursor: pointer;
   transition: background-color 0.3s, color 0.3s;
@@ -26,6 +25,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1001;
 }
 
 .popup {
